cambiar configuracion eas

--- a/eas.json
+++ b/eas.json
@@ -12,10 +12,7 @@
             }
         },
         "preview": {
-            "distribution": "internal",
-            "android": {
-                "buildType": "apk"
-            }
+            "distribution": "internal"
         },
         "production": {}
     },
